--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -7,14 +7,17 @@ defaults:
     working-directory: ./web
 jobs:
   run-cypress-tests:
-    - name: Run E2E tests 🧪
-      uses: cypress-io/github-action@v5
+    name: Run Cypress Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run E2E tests 🧪
+        uses: cypress-io/github-action@v5
 
-    - name: Run Component tests 🧪
-      uses: cypress-io/github-action@v5
-      with:
-        install: false
-        component: true
+      - name: Run Component tests 🧪
+        uses: cypress-io/github-action@v5
+        with:
+          install: false
+          component: true
   # run-linters:
   #   name: Run Linter
   #   runs-on: ubuntu-latest
