--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Node.js and NPM
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: "14.x"
+          node-version: "18"
       - name: Install Cypress
         run: npm install cypress@12.7.0
       - name: Run tests with Cypress
