--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.0.0",
+    "react-loading-skeleton": "^3.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-test-renderer": "^18.2.0",
