--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -59,3 +59,5 @@ jobs:
         run: npm install cypress@12.7.0
       - name: Run tests with Cypress
         run: npx cypress run --component
+        env:
+          REACT_APP_MEASUREMENT_ID: "measurement-ID"
