--- a/web/package.json
+++ b/web/package.json
@@ -1,10 +1,7 @@
 {
   "name": "web",
   "jest": {
-    "resetMocks": false,
-    "setupFiles": [
-      "dotenv/config"
-    ]
+    "resetMocks": false
   },
   "version": "0.1.0",
   "private": true,
