--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Run linter
         run: npm run lint
+      - name: Run prettier
         run: npx prettier -l
 
   run-tests:
