--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Run linter
         run: npm run lint
       - name: Run prettier
-        run: npx prettier -l
+        run: npx prettier -l .
 
   run-tests:
     name: Run Tests
