--- a/database/metadata/query_collections.yaml
+++ b/database/metadata/query_collections.yaml
@@ -1,6 +1,31 @@
 - name: allowed-queries
   definition:
     queries:
+      - name: groups
+        query: |
+          query GET_GROUPS {
+            group {
+              name
+              items {
+                topic {
+                  name
+                  slug
+                  image
+                  descriptions {
+                    extra_short
+                  }
+                }
+              }
+            }
+          }
+      - name: Topics
+        query: |
+          query TOPICS {
+            topic {
+              slug
+              name
+            }
+          }
       - name: Topic
         query: |
           query GET_TOPIC ($slug: String, $audience: numeric) {
@@ -69,11 +94,19 @@
               }
             }
           }
-      - name: Topics
+      - name: Insert Topic
         query: |
-          query TOPICS {
-            topic {
-              slug
-              name
+          mutation ADD_TOPIC ($topics: [topic_insert_input!]!, $descriptions: [description_insert_input!]!, $relationships: [relationship_insert_input!]!, $hierarchies: [hierarchy_insert_input!]!) {
+            insert_topic(objects: $topics) {
+              affected_rows
+            }
+            insert_description(objects: $descriptions) {
+              affected_rows
+            }
+            insert_relationship(objects: $relationships) {
+              affected_rows
+            }
+            insert_hierarchy(objects: $hierarchies) {
+              affected_rows
             }
           }
