Generate Descriptions using OpenAI (#89)
* init

* get/post

* isGenerated

* Update TopicPage.js

* all the data!

* post data

* generate

* db endpoint

* shape

* query conflicts

* fix post request

* image

* description

* Delete README.md

* Revert "Delete README.md"

This reverts commit d162b8810f4f90b7a8b46f5b2c0164fd9482745f.

* Delete README.md

* Update package-lock.json

* Update index.js

* Update index.js

* updated dummy data for test to pass

* added gitignore registries and disabled video for cypress in congfig

---------

Co-authored-by: Ademsk1 <85499621+Ademsk1@users.noreply.github.com>
Co-authored-by: mdapim <115515283+mdapim@users.noreply.github.com>

--- a/database/metadata/rest_endpoints.yaml
+++ b/database/metadata/rest_endpoints.yaml
@@ -7,6 +7,15 @@
     - GET
   name: groups
   url: groups
+- comment: Adds a new topic to the database
+  definition:
+    query:
+      collection_name: allowed-queries
+      query_name: Insert Topic
+  methods:
+    - POST
+  name: Insert Topic
+  url: topic
 - comment: A single topic, return all audiences
   definition:
     query:
