--- a/database/metadata/query_collections.yaml
+++ b/database/metadata/query_collections.yaml
@@ -111,3 +111,10 @@
               }
             }
           }
+      - name: All Topics
+        query: |
+          query ALL_TOPICS {
+            topics: topic {
+              topic: slug
+            }
+          }
