--- a/database/metadata/rest_endpoints.yaml
+++ b/database/metadata/rest_endpoints.yaml
@@ -43,3 +43,12 @@
     - GET
   name: Topics
   url: topics
+- comment: "A list of all topics to build static pages"
+  definition:
+    query:
+      collection_name: allowed-queries
+      query_name: All Topics
+  methods:
+    - GET
+  name: All Topics
+  url: topics/all
