--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "jest": "^27.5.1",
     "jest-fetch-mock": "^3.0.3",
     "jest-localstorage-mock": "^2.4.26",
+    "lottie-react": "^2.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
