--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.2.0",
