--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "cypress": "^12.6.0",
     "dotenv": "^16.0.3",
     "jest": "^27.5.1",
+    "jest-canvas-mock": "^2.4.0",
     "jest-fetch-mock": "^3.0.3",
     "jest-localstorage-mock": "^2.4.26",
     "lottie-react": "^2.4.0",
