fixed yaml depends on

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -48,7 +48,7 @@ jobs:
   run-cypress-tests:
     name: Run Cypress Tests
     runs-on: ubuntu-latest
-    needs: run-linters
+    # needs: run-linters
     steps:
       - name: Checkout Git repository
         uses: actions/checkout@v3
