--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -6,49 +6,49 @@ defaults:
   run:
     working-directory: ./web
 jobs:
-  # run-linters:
-  #   name: Run Linter
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Check out Git repository
-  #       uses: actions/checkout@v3
+  run-linters:
+    name: Run Linter
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v3
 
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 16
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
 
-  #     - name: install node packages
-  #       run: npm ci
+      - name: install node packages
+        run: npm ci
 
-  #     - name: Run linter
-  #       run: npm run lint
-  #     - name: Run prettier
-  #       run: npx prettier -l .
+      - name: Run linter
+        run: npm run lint
+      - name: Run prettier
+        run: npx prettier -l .
 
-  # run-tests:
-  #   name: Run Tests
-  #   runs-on: ubuntu-latest
-  #   needs: run-linters
-  #   steps:
-  #     - name: Check out Git repository
-  #       uses: actions/checkout@v3
+  run-tests:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    needs: run-linters
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v3
 
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 16
-  #     - name: install node packages
-  #       run: npm ci
-  #     - name: Run Test
-  #       run: npm test
-  #       env:
-  #         REACT_APP_MEASUREMENT_ID: "measurement-ID"
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - name: install node packages
+        run: npm ci
+      - name: Run Test
+        run: npm test
+        env:
+          REACT_APP_MEASUREMENT_ID: "measurement-ID"
 
   run-cypress-tests:
     name: Run Cypress Tests
     runs-on: ubuntu-latest
-    # needs: run-linters
+    needs: run-linters
     steps:
       - name: Checkout Git repository
         uses: actions/checkout@v3
@@ -63,3 +63,4 @@ jobs:
         run: npx cypress run --component
         env:
           REACT_APP_MEASUREMENT_ID: "measurement-ID"
+          REACT_APP_GROUPS_URL: "https://explainai-api.onrender.com/groups"
