--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -63,4 +63,4 @@ jobs:
         run: npx cypress run --component
         env:
           REACT_APP_MEASUREMENT_ID: "measurement-ID"
-          REACT_APP_GROUPS_URL: "https://explainai-api.onrender.com/groups"
+          REACT_APP_API_ENDPOINT: "http://localhost:4000"
