--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "node-fetch": "^3.3.0",
     "openai": "^3.2.1",
+    "prerender-node": "^3.5.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "slug": "^8.2.2"
