--- a/database/metadata/databases/default/tables/public_topic.yaml
+++ b/database/metadata/databases/default/tables/public_topic.yaml
@@ -69,20 +69,20 @@ event_triggers:
   - name: revalidate_topic
     definition:
       delete:
-        columns: "*"
+        columns: '*'
       enable_manual: false
       insert:
-        columns: "*"
+        columns: '*'
       update:
-        columns: "*"
+        columns: '*'
     retry_conf:
       interval_sec: 10
       num_retries: 0
       timeout_sec: 60
-    webhook: "{{API_ENDPOINT}}/api/revalidate"
+    webhook: '{{API_ENDPOINT}}/api/revalidate'
     request_transform:
       body:
         action: transform
-        template: "{{$body.event.data.new.slug}}"
+        template: '{{$body.event.data.new.slug}}'
       template_engine: Kriti
       version: 2
